syntax = "proto3";

package j5.list.v1;

import "buf/validate/validate.proto";
//import "j5/ext/v1/annotations.proto";

option go_package = "github.com/pentops/j5/gen/j5/list/v1/list_j5pb";

message QueryRequest {
  repeated Search searches = 1;
  repeated Sort sorts = 2;
  repeated Filter filters = 3;
}

message Search {
  string field = 1;
  string value = 2;
}

message Sort {
  string field = 1;
  bool descending = 2;
}

message Filter {
  oneof type {
    Field field = 1;
    And and = 2;
    Or or = 3;
  }
}

message And {
  repeated Filter filters = 1;
}

message Or {
  repeated Filter filters = 1;
}

message Field {
  string name = 1;
  FieldType type = 2 [(buf.validate.field) = {required: true}];
}

message FieldType {
  oneof type {
    option (buf.validate.oneof).required = true;
    //option (j5.ext.v1.oneof).expose = true;

    string value = 2;
    Range range = 3;
  }
}

message Range {
  string min = 1;
  string max = 2;
}
